--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,8 @@ body{
     background-color: #1e2326;
     background-image:url(contact_bg.png);
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .img{
     display: flex;
